Add bronze armor crafting recipes
- Add Armor_Helmet_Bronze, Armor_Chestplate_Bronze, Armor_Leggings_Bronze, Armor_Boots_Bronze
- Add standalone recipe files for vanilla bronze armor (Armor_Bronze_Head/Chest/Legs/Hands)
- Recipes use Armor_Bench with Workbench_Crafting category
- Version bump to 1.3.0

--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -1,8 +1,8 @@
 {
     "Group": "Jordansbored",
     "Name": "BronzeAge",
-    "Version": "1.2.1",
-    "Description": "Adds tin ore, bronze alloy crafting, and bronze-tier tools. Mine tin, smelt it with copper in the heavy-duty Alloy Furnace, and forge powerful bronze equipment!",
+    "Version": "1.3.0",
+    "Description": "Adds tin ore, bronze alloy crafting, bronze-tier tools, armor, and weapons. Mine tin, smelt it with copper in the heavy-duty Alloy Furnace, and forge powerful bronze equipment!",
     "Authors": [
         {
             "Name": "Jordansbored",
